enviroments/dev/deployment/nginx/deployment_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx
  labels:
    app: deployment-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-nginx
  template:
    metadata:
      labels:
        app: deployment-nginx
    spec:
      containers:
      - name: deployment-nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
