enviroments/dev/deployment/nginx/service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  type: NodePort
  selector:
    app: deployment-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
